2004-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* compiler.csproj: Updated for Visual Studio .NET 2003.
	* compiler.csproj.user: Updated for Visual Studio .NET 2003.
	* compiler.sln: Updated for Visual Studio .NET 2003.

2004-03-24  Ravi Pratap M  <ravi@ximian.com>

	* expression.cs: Fix bug #47234. We basically need to apply the
	rule that we prefer the conversion of null to a reference type
	when faced with a conversion to 'object' (csc behaviour).

2004-03-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* statement.cs: Shorter form for foreach, eliminates
	a local variable. r=Martin.

2004-03-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* constant.cs, ecore.cs, literal.cs: New prop IsZeroInteger that
	checks if we can use brtrue/brfalse to test for 0.
	* expression.cs: use the above in the test for using brtrue/brfalse.
	cleanup code a bit.

2004-03-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: Rewrite string concat stuff. Benefits:

	- "a" + foo + "b" + "c" becomes "a" + foo + "bc"
	- "a" + foo + "b" + bar + "c" + baz ... uses concat (string []).
	rather than a concat chain.

	* typemanager.cs: Add lookups for more concat overloads.

2004-03-23 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: Emit shorter il code for array init.

	newarr
	dup
	// set 1
	
	// set 2

	newarr
	stloc.x

	ldloc.x
	// set 1

	ldloc.x
	// set 2

2004-03-22 Ben Maurer  <bmaurer@users.sourceforge.net>

	* statement.cs: Before, two switch blocks would be merged if the
	total size of the blocks (end_item - begin_item + 1) was less than
	two times the combined sizes of the blocks.

	Now, it will only merge if after the merge at least half of the
	slots are filled.

	fixes 55885.

2004-03-20  Atsushi Enomoto  <atsushi@ximian.com>

	* class.cs : csc build fix for GetMethods(). See bug #52503.

2004-03-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: Make sure fp comparisons work with NaN.